--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production",
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "lint": "eslint src/**/*.js",
     "test": "jest"
   },
@@ -19,20 +19,20 @@
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint": "^9.10.0",
+    "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.3",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "terser-webpack-plugin": "^5.3.3",
-    "css-minimizer-webpack-plugin": "^5.1.4",
-    "identity-obj-proxy": "^3.0.0"
+    "webpack-dev-server": "^5.1.0"
   },
   "babel": {
     "presets": [
